# depsdrift

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
depsdrift/: cli.py  contracts.py  drift.py  globmatch.py  specs.py  workgraph.py
tests/: test_drift.py  test_imports.py
