[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "depsdrift"
version = "0.1.0"
description = "Speedrift-suite dependency lock drift checker for Workgraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "speedrift-lane-sdk",
]

[project.scripts]
depsdrift = "depsdrift.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["depsdrift*"]

[tool.uv.sources]
speedrift-lane-sdk = { git = "https://github.com/dbmcco/speedrift-lane-sdk.git" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

